Create template layout scheme

--- a/templates/PageStandard.twig
+++ b/templates/PageStandard.twig
@@ -3,4 +3,8 @@
 {# @var array contentMeta #}
 {# @var string metaTitle #}
 
-Hello World
+{% extends '_layouts/Master.twig' %}
+
+{% block content %}
+    hello world
+{% endblock %}
