--- a/templates/_layouts/Master.twig
+++ b/templates/_layouts/Master.twig
@@ -1,11 +1,13 @@
 {% extends '_layouts/HtmlWrapper.twig' %}
 
 {% block layoutContent %}
-    {% include '_partials/SiteHeader.twig' %}
+    <div class="SiteWrapper">
+        {% include '_partials/SiteHeader.twig' %}
 
-    <main class="SiteMain">
-        {{ block('content') }}
-    </main>
+        <main class="SiteMain">
+            {{ block('content') ?? '' }}
+        </main>
 
-    {% include '_partials/SiteFooter.twig' %}
+        {% include '_partials/SiteFooter.twig' %}
+    </div>
 {% endblock %}
