--- a/assetsSource/css/vars/Reset.pcss
+++ b/assetsSource/css/vars/Reset.pcss
@@ -1,8 +1,8 @@
 :root {
     --bodyBackground: var(--darkerGray);
     --baseColor: var(--darkerGray);
-    --baseFont: "proxima-nova", sans-serif;
+    --baseFont: var(--StandardFont);
     //--baseFontSize: 16px;
-    //--baseFontWeight: normal;
+    --baseFontWeight: var(--StandardFontRegularWeight);
     //--baseLineHeight: 1em;
 }
