Add initial mobile nav bar styling

--- a/templates/_partials/SiteHeader.twig
+++ b/templates/_partials/SiteHeader.twig
@@ -41,7 +41,7 @@
                 </li>
             {% endfor %}
             <li class="NavBar__StandardNavItem">
-                <a href="https://twitter.com/{{ general.twitterHandle }}" class="NavBar__StandardNavLink" title="BuzzingPixel On Twitter">
+                <a href="https://twitter.com/{{ general.twitterHandle }}" class="NavBar__StandardNavLink NavBar__IconParentHover" title="BuzzingPixel On Twitter">
                     <span class="HideElement">BuzzingPixel On Twitter</span>
                     <span class="NavBar__Icon">
                         {% include '_icons/icon-twitter.svg' %}
@@ -51,7 +51,7 @@
         </ul>
         <ul class="NavBar__RightHandControls">
             <li class="NavBar__RightHandControlItem">
-                <a href="/account" class="NavBar__RightHandControlLink" title="Your BuzzingPixel Account">
+                <a href="/account" class="NavBar__RightHandControlLink NavBar__IconParentHover" title="Your BuzzingPixel Account">
                     <span class="HideElement">Your BuzzingPixel Account</span>
                     <span class="NavBar__Icon">
                         {% include '_icons/icon-user.svg' %}
@@ -59,7 +59,7 @@
                 </a>
             </li>
             <li class="NavBar__RightHandControlItem">
-                <a href="/cart" class="NavBar__RightHandControlLink" title="Cart">
+                <a href="/cart" class="NavBar__RightHandControlLink NavBar__IconParentHover" title="Cart">
                     <span class="HideElement">Cart</span>
                     <span class="NavBar__Icon">
                         {% include '_icons/icon-cart.svg' %}
