--- a/templates/_core/PageStandard.twig
+++ b/templates/_core/PageStandard.twig
@@ -1,3 +1,4 @@
+{# @var \craft\web\twig\variables\CraftVariable craft #}
 {# @var \dev\models\FileContentModel contentModel #}
 {# @var array content #}
 {# @var array contentMeta #}
