--- a/templates/_layouts/HtmlWrapper.twig
+++ b/templates/_layouts/HtmlWrapper.twig
@@ -1,3 +1,5 @@
+{# @var \craft\web\twig\variables\CraftVariable craft #}
+
 {% set metaTitle = metaTitle|default(false) %}
 {% set metaDescription = metaDescription|default(false) %}
 {% set showCanonical = showCanonical|default(true) %}
