--- a/assetsSource/css/layout/NavBar/NavBar.0000.pcss
+++ b/assetsSource/css/layout/NavBar/NavBar.0000.pcss
@@ -11,6 +11,7 @@
 
 .NavBar__HomeBanner {
     display: inline-block;
+    margin-bottom: -2px;
     padding: 8px;
 }
 
@@ -23,7 +24,7 @@
 .NavBar__StandardSubNav {
     background-color: #fff;
     color: var(--darkGray);
-    margin: -2px 0 0 0;
+    margin: 0;
 }
 
 .NavBar__StandardNavItem:nth-child(even),
