Add sub menu mobile functionality

--- a/assetsSource/css/layout/NavBar/NavBar.0000.pcss
+++ b/assetsSource/css/layout/NavBar/NavBar.0000.pcss
@@ -12,7 +12,12 @@
 .NavBar__HomeBanner {
     display: inline-block;
     margin-bottom: -2px;
+    outline: none;
     padding: 8px;
+}
+
+.NavBar__HomeBannerLink:focus {
+    outline: none;
 }
 
 .NavBar__StandardNav {
