Add initial menu styling for tablet

--- a/assetsSource/css/layout/NavBar/NavBar.0000.pcss
+++ b/assetsSource/css/layout/NavBar/NavBar.0000.pcss
@@ -59,6 +59,7 @@
     width: 20px;
     transform: rotate(180deg);
     transition: transform 0.3s;
+    vertical-align: middle;
 }
 
 .NavBar__StandardNavItem--SubNavIsActive .NavBar__LinkCaret {
@@ -116,6 +117,7 @@
 }
 
 .NavBar__RightHandControls {
+    margin: 0;
     position: absolute;
     right: 48px;
     top: 8px;
