Fix an issue with the menu twitter icon

--- a/assetsSource/css/layout/NavBar/NavBar.0768.pcss
+++ b/assetsSource/css/layout/NavBar/NavBar.0768.pcss
@@ -41,6 +41,10 @@
     width: calc(100% - 20px);
 }
 
+.NavBar__StandardNavItem--IsTwitterIcon {
+    margin-bottom: -3px;
+}
+
 .NavBar__LinkCaret {
     float: none;
     position: relative;
