--- a/templates/_partials/SiteHeader.twig
+++ b/templates/_partials/SiteHeader.twig
@@ -1,7 +1,7 @@
 {# @var \craft\web\twig\variables\CraftVariable craft #}
 
 <header class="SiteHeader">
-    <nav class="NavBar">
+    <nav class="NavBar JSNavBar" data-scrolled-class="NavBar--IsScrolled">
         <div class="NavBar__HomeBanner">
             <a href="/" class="NavBar__HomeBannerLink" rel="home" title="BuzzingPixel Home Page" tabindex="1">
                 <span class="HideElement">BuzzingPixel Home Page</span>
