Fix an animation issue on sticky nav

--- a/assetsSource/css/layout/NavBar/NavBar.0768.pcss
+++ b/assetsSource/css/layout/NavBar/NavBar.0768.pcss
@@ -109,7 +109,7 @@
  * Scrolled page nav bar
  */
 
-.NavBar--IsScrolled,
+.NavBar,
 .NavBar__HomeBanner,
 .NavBar__HomeBannerImage,
 .NavBar__StandardNavLink,
