Fix an issue with subnav on desktop

--- a/assetsSource/css/layout/NavBar/NavBar.0768.pcss
+++ b/assetsSource/css/layout/NavBar/NavBar.0768.pcss
@@ -71,7 +71,7 @@
 
 .NavBar__StandardSubNav {
     box-shadow: 0 5px 10px 0 rgba(0, 0, 0, 0.3);
-    display: block;
+    display: none;
     min-width: 100%;
     position: absolute;
     right: 50%;
