Add background image to header

--- a/assetsSource/css/layout/SiteHeader/SiteHeader.0000.pcss
+++ b/assetsSource/css/layout/SiteHeader/SiteHeader.0000.pcss
@@ -1,5 +1,7 @@
 .SiteHeader {
     background-color: var(--green);
+    background-position: 50% 50%;
+    background-size: cover;
 }
 
 /** TODO: Temporary styling to give the header some height while styling other stuff **/
