--- a/templates/_core/PageStandard.twig
+++ b/templates/_core/PageStandard.twig
@@ -3,10 +3,12 @@
 {# @var array content #}
 {# @var array contentMeta #}
 {# @var string metaTitle #}
+{# @var array header #}
 
 {% extends '_layouts/Master.twig' %}
 
 {% block content %}
+    {{ dump(header) }}
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto asperiores aut beatae commodi corporis delectus dignissimos doloribus enim illo ipsam nihil nostrum optio, pariatur quos sed temporibus veniam vero? Asperiores.</p>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto asperiores aut beatae commodi corporis delectus dignissimos doloribus enim illo ipsam nihil nostrum optio, pariatur quos sed temporibus veniam vero? Asperiores.</p>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto asperiores aut beatae commodi corporis delectus dignissimos doloribus enim illo ipsam nihil nostrum optio, pariatur quos sed temporibus veniam vero? Asperiores.</p>
