--- a/templates/_partials/SiteHeader.twig
+++ b/templates/_partials/SiteHeader.twig
@@ -1,6 +1,8 @@
 {# @var \craft\web\twig\variables\CraftVariable craft #}
 
-<header class="SiteHeader">
+{% set header = header|default(null) %}
+
+<header class="SiteHeader"{% if header['meta']['backgroundImage'] is defined %} style="background-image: url('{{ header['meta']['backgroundImage'] }}');"{% endif %}>
     <nav class="NavBar JSNavBar" data-scrolled-class="NavBar--IsScrolled">
         <div class="NavBar__HomeBanner">
             <a href="/" class="NavBar__HomeBannerLink" rel="home" title="BuzzingPixel Home Page" tabindex="1">
