Add markup for header heading and subheading

--- a/assetsSource/css/layout/SiteHeader/SiteHeader.0000.pcss
+++ b/assetsSource/css/layout/SiteHeader/SiteHeader.0000.pcss
@@ -6,5 +6,10 @@
 
 /** TODO: Temporary styling to give the header some height while styling other stuff **/
 .SiteHeader__Content {
-    height: 400px;
+    padding-top: 65px;
+}
+
+.SiteHeader__Heading,
+.SiteHeader__SubHeading {
+    margin: 0;
 }
