--- a/assetsSource/css/layout/SiteHeader/SiteHeader.0000.pcss
+++ b/assetsSource/css/layout/SiteHeader/SiteHeader.0000.pcss
@@ -6,10 +6,42 @@
 
 /** TODO: Temporary styling to give the header some height while styling other stuff **/
 .SiteHeader__Content {
+    overflow: hidden;
     padding-top: 65px;
+    position: relative;
+}
+
+.SiteHeader__ContentInner {
+    text-align: center;
+}
+
+.SiteHeader__ContentPrimary {
+    padding: 18px 8px 18px 8px;
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 610px;
 }
 
 .SiteHeader__Heading,
 .SiteHeader__SubHeading {
     margin: 0;
+}
+
+.SiteHeader__Heading {
+    color: #fff;
+    font-family: var(--AltFont);
+    font-weight: var(--AltFontBoldWeight);
+    font-size: 36px;
+    line-height: 1.4em;
+    margin-bottom: 0;
+}
+
+.SiteHeader__SubHeading {
+    color: #fff;
+    font-family: var(--StandardFont);
+    font-weight: var(--StandardFontLightWeight);
+    font-size: 24px;
+    font-style: italic;
+    line-height: 1.6em;
+    margin-top: 12px;
 }
