Add ability for header to have html content

--- a/assetsSource/css/layout/SiteHeader/SiteHeader.0000.pcss
+++ b/assetsSource/css/layout/SiteHeader/SiteHeader.0000.pcss
@@ -45,3 +45,13 @@
     line-height: 1.6em;
     margin-top: 12px;
 }
+
+.SiteHeader__ContentBody,
+.SiteHeader__ContentBody p {
+    color: #fff;
+    font-size: 20px;
+}
+
+.SiteHeader__ContentBody {
+    margin-top: 20px;
+}
