Add ability for header to have call to action

--- a/templates/_core/PageStandard.twig
+++ b/templates/_core/PageStandard.twig
@@ -9,44 +9,15 @@
 
 {% block content %}
     <br><br><br><br>
-    <div class="CTAGroup">
-        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="#" class="button">This is a button &raquo;</a>
-        <br><br>
-        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="#" class="button button--outlined">This is a button &raquo;</a>
-        <br><br>
-        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="#" class="button button--colored">This is a button &raquo;</a>
-        <br><br>
-        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="#" class="button button--colored button--outlined">This is a button &raquo;</a>
-        <br><br>
-        <label for="" class="label">Thing</label>
-        <input type="text" class="input">
-        <br><br>
-        <textarea class="textarea"></textarea>
-        <br><br>
-        <select class="select">
-            <option value="asdf">This is an option</option>
-            <option value="asdf">This is an option</option>
-            <option value="asdf">This is an option</option>
-            <option value="asdf">This is an option</option>
-            <option value="asdf">This is an option</option>
-            <option value="asdf">This is an option</option>
-        </select>
-        <select class="select" multiple>
-            <option value="asdf">This is an option</option>
-            <option value="asdf">This is an option</option>
-            <option value="asdf">This is an option</option>
-            <option value="asdf">This is an option</option>
-            <option value="asdf">This is an option</option>
-            <option value="asdf">This is an option</option>
-        </select>
-        {#<a href="#" class="button">This is a button &raquo;</a>
-        <a href="#" class="button">This is a button &raquo;</a>
-        <a href="#" class="button">This is a button &raquo;</a>
-        <a href="#" class="button">This is a button &raquo;</a>
-        <a href="#" class="button">This is a button &raquo;</a>
-        <a href="#" class="button">This is a button &raquo;</a>
-        <a href="#" class="button">This is a button &raquo;</a>
-        <a href="#" class="button">This is a button &raquo;</a>#}
+    <div class="CTAGroup CTAGroup--IsFlushLeft">
+        <a href="#" class="button CTAGroup__button">This is a button &raquo;</a>
+        <a href="#" class="button CTAGroup__button">This is a button &raquo;</a>
+        <a href="#" class="button CTAGroup__button">This is a button &raquo;</a>
+        <a href="#" class="button CTAGroup__button">This is a button &raquo;</a>
+        <a href="#" class="button CTAGroup__button">This is a button &raquo;</a>
+        <a href="#" class="button CTAGroup__button">This is a button &raquo;</a>
+        <a href="#" class="button CTAGroup__button">This is a button &raquo;</a>
+        <a href="#" class="button CTAGroup__button">This is a button &raquo;</a>
     </div>
     <br><br><br><br><br><br><br><br><br><br><br><br><br><br>
     {#{{ dump(header) }}#}
