--- a/assetsSource/css/layout/SiteHeader/SiteHeader.0000.pcss
+++ b/assetsSource/css/layout/SiteHeader/SiteHeader.0000.pcss
@@ -59,3 +59,7 @@
 .SiteHeader__CTAGroup {
     margin-top: 20px;
 }
+
+.SiteHeader__FeaturedImage--HasShadow img {
+    box-shadow: 0 6px 20px 6px rgba(0, 0, 0, 0.25);
+}
