--- a/templates/_core/PageStandard.twig
+++ b/templates/_core/PageStandard.twig
@@ -4,44 +4,14 @@
 {# @var array contentMeta #}
 {# @var string metaTitle #}
 {# @var array header #}
+{# @var array contentBlocks #}
 
 {% extends '_layouts/Master.twig' %}
 
 {% block content %}
-    <br><br><br><br>
-    <div class="CTAGroup CTAGroup--IsFlushLeft">
-        <a href="#" class="button CTAGroup__button">This is a button &raquo;</a>
-        <a href="#" class="button CTAGroup__button">This is a button &raquo;</a>
-        <a href="#" class="button CTAGroup__button">This is a button &raquo;</a>
-        <a href="#" class="button CTAGroup__button">This is a button &raquo;</a>
-        <a href="#" class="button CTAGroup__button">This is a button &raquo;</a>
-        <a href="#" class="button CTAGroup__button">This is a button &raquo;</a>
-        <a href="#" class="button CTAGroup__button">This is a button &raquo;</a>
-        <a href="#" class="button CTAGroup__button">This is a button &raquo;</a>
-    </div>
-    <br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-    {#{{ dump(header) }}#}
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto asperiores aut beatae commodi corporis delectus dignissimos doloribus enim illo ipsam nihil nostrum optio, pariatur quos sed temporibus veniam vero? Asperiores.</p>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto asperiores aut beatae commodi corporis delectus dignissimos doloribus enim illo ipsam nihil nostrum optio, pariatur quos sed temporibus veniam vero? Asperiores.</p>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto asperiores aut beatae commodi corporis delectus dignissimos doloribus enim illo ipsam nihil nostrum optio, pariatur quos sed temporibus veniam vero? Asperiores.</p>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto asperiores aut beatae commodi corporis delectus dignissimos doloribus enim illo ipsam nihil nostrum optio, pariatur quos sed temporibus veniam vero? Asperiores.</p>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto asperiores aut beatae commodi corporis delectus dignissimos doloribus enim illo ipsam nihil nostrum optio, pariatur quos sed temporibus veniam vero? Asperiores.</p>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto asperiores aut beatae commodi corporis delectus dignissimos doloribus enim illo ipsam nihil nostrum optio, pariatur quos sed temporibus veniam vero? Asperiores.</p>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto asperiores aut beatae commodi corporis delectus dignissimos doloribus enim illo ipsam nihil nostrum optio, pariatur quos sed temporibus veniam vero? Asperiores.</p>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto asperiores aut beatae commodi corporis delectus dignissimos doloribus enim illo ipsam nihil nostrum optio, pariatur quos sed temporibus veniam vero? Asperiores.</p>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto asperiores aut beatae commodi corporis delectus dignissimos doloribus enim illo ipsam nihil nostrum optio, pariatur quos sed temporibus veniam vero? Asperiores.</p>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto asperiores aut beatae commodi corporis delectus dignissimos doloribus enim illo ipsam nihil nostrum optio, pariatur quos sed temporibus veniam vero? Asperiores.</p>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto asperiores aut beatae commodi corporis delectus dignissimos doloribus enim illo ipsam nihil nostrum optio, pariatur quos sed temporibus veniam vero? Asperiores.</p>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto asperiores aut beatae commodi corporis delectus dignissimos doloribus enim illo ipsam nihil nostrum optio, pariatur quos sed temporibus veniam vero? Asperiores.</p>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto asperiores aut beatae commodi corporis delectus dignissimos doloribus enim illo ipsam nihil nostrum optio, pariatur quos sed temporibus veniam vero? Asperiores.</p>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto asperiores aut beatae commodi corporis delectus dignissimos doloribus enim illo ipsam nihil nostrum optio, pariatur quos sed temporibus veniam vero? Asperiores.</p>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto asperiores aut beatae commodi corporis delectus dignissimos doloribus enim illo ipsam nihil nostrum optio, pariatur quos sed temporibus veniam vero? Asperiores.</p>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto asperiores aut beatae commodi corporis delectus dignissimos doloribus enim illo ipsam nihil nostrum optio, pariatur quos sed temporibus veniam vero? Asperiores.</p>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto asperiores aut beatae commodi corporis delectus dignissimos doloribus enim illo ipsam nihil nostrum optio, pariatur quos sed temporibus veniam vero? Asperiores.</p>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto asperiores aut beatae commodi corporis delectus dignissimos doloribus enim illo ipsam nihil nostrum optio, pariatur quos sed temporibus veniam vero? Asperiores.</p>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto asperiores aut beatae commodi corporis delectus dignissimos doloribus enim illo ipsam nihil nostrum optio, pariatur quos sed temporibus veniam vero? Asperiores.</p>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto asperiores aut beatae commodi corporis delectus dignissimos doloribus enim illo ipsam nihil nostrum optio, pariatur quos sed temporibus veniam vero? Asperiores.</p>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto asperiores aut beatae commodi corporis delectus dignissimos doloribus enim illo ipsam nihil nostrum optio, pariatur quos sed temporibus veniam vero? Asperiores.</p>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto asperiores aut beatae commodi corporis delectus dignissimos doloribus enim illo ipsam nihil nostrum optio, pariatur quos sed temporibus veniam vero? Asperiores.</p>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto asperiores aut beatae commodi corporis delectus dignissimos doloribus enim illo ipsam nihil nostrum optio, pariatur quos sed temporibus veniam vero? Asperiores.</p>
+    {% for block in contentBlocks %}
+        {% include '_contentBlocks/_blockIncluder.twig' with {
+            block: block
+        } only %}
+    {% endfor %}
 {% endblock %}
