Fix a header featured image margin issue

--- a/assetsSource/css/layout/SiteHeader/SiteHeader.0000.pcss
+++ b/assetsSource/css/layout/SiteHeader/SiteHeader.0000.pcss
@@ -63,3 +63,7 @@
 .SiteHeader__FeaturedImage--HasShadow img {
     box-shadow: 0 6px 20px 6px rgba(0, 0, 0, 0.25);
 }
+
+.SiteHeader__FeaturedImageTag {
+    margin-bottom: -4px;
+}
