--- a/templates/_partials/SiteHeader.twig
+++ b/templates/_partials/SiteHeader.twig
@@ -171,6 +171,7 @@
                                     {{ featuredImages.primary2x }} 2x"
                             {% endif %}
                             alt="{% if header['meta']['heading'] is defined %}{{ header['meta']['heading'] }}{% endif %}"
+                            class="SiteHeader__FeaturedImageTag"
                         >
                     </picture>
                 </div>
