Add Custom CMS Add-ons section to home page

--- a/assetsSource/css/blocks/BlockStandard/BlockStandard.0000.pcss
+++ b/assetsSource/css/blocks/BlockStandard/BlockStandard.0000.pcss
@@ -46,3 +46,15 @@
     margin-bottom: -4px;
 }
 
+
+
+
+
+/**
+ * Green Background Modifier
+ */
+
+.ContentBlock--HasBgColor-Green * {
+    color: #fff;
+}
+
