--- a/assetsSource/css/blocks/_ContentBlock/ContentBlock.0000.pcss
+++ b/assetsSource/css/blocks/_ContentBlock/ContentBlock.0000.pcss
@@ -1,3 +1,7 @@
 .ContentBlock--HasBgColor-LightGray {
     background-color: var(--lighterGray);
 }
+
+.ContentBlock--HasBgColor-Green {
+    background-color: var(--green);
+}
